--- a/electron_live.html
+++ b/electron_live.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>DooM BFG Launcher</title>
+    <title>DooM BFG Launcher [Live Reload]</title>
   </head>
   <body>
     <noscript>
